Completely reworked randomization
Float text and messages optional
New wound: Destroyed

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -1,3 +1,40 @@
+
+#define NFW_wounds_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_wounds equals 0}
+#enddef
+
+#define NFW_wounds_DISABLED
+    {VARIABLE_CONDITIONAL nfwe_wounds equals 1}
+#enddef
+
+#define NFW_wounds_DISABLED_with_plague
+    {VARIABLE_CONDITIONAL nfwe_wounds equals 2}
+#enddef
+
+#define NFW_dead_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_deadundead equals 1}
+#enddef
+
+#define NFW_undead_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_deadundead equals 2}
+#enddef
+
+#define NFW_funny_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_funny equals yes}
+#enddef
+
+#define NFW_ENABLED_HELP
+    {VARIABLE_CONDITIONAL nfw_04 equals yes}
+#enddef
+
+#define NFW_elemental_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_elemental equals yes}
+#enddef
+
+#define NFW_elemental_DISABLED
+    {VARIABLE_CONDITIONAL nfwe_elemental equals no}
+#enddef
+
 #define EVENT_UNIT
     x,y=$x1,$y1
 #enddef
@@ -20,12 +57,21 @@
     color="0,255,0"
 #enddef
 
-#define NFW_FLOAT_TEXT X Y MSG COLOR
-    [floating_text]
-        x,y={X},{Y}
-        {COLOR}
-        text={MSG}
-    [/floating_text]
+#define NFW_FLOAT_TEXT_CONDITIONAL X Y MSG COLOR
+    [if]
+        {VARIABLE_CONDITIONAL nfwe_float_text equals no}
+        [then]
+            [scroll_to_unit]
+                x,y={X},{Y}
+                check_fogged=yes
+            [/scroll_to_unit]
+            [floating_text]
+                x,y={X},{Y}
+                {COLOR}
+                text={MSG}
+            [/floating_text]
+            [then]
+            [/if]
 #enddef
 
 #define NFW_FLOAT_TEXT_SCROLL X Y MSG COLOR
@@ -48,66 +94,36 @@
 #enddef
 
 #define NFW_FILTER_HEROES
-    [have_location]
-        {EVENT_UNIT}
-        [filter]
-            canrecruit=yes
-        [/filter]
-    [/have_location]
+    canrecruit=yes
     [or]
-        [have_location]
-            {EVENT_UNIT}
-            [filter]
-                [filter_wml]
-                    ellipse="misc/ellipse-hero"
-                [/filter_wml]
-            [/filter]
-        [/have_location]
+        [filter_wml]
+            ellipse="misc/ellipse-hero"
+        [/filter_wml]
     [/or]
     [or]
-        [have_location]
-            {EVENT_UNIT}
-            [filter]
-                [filter_wml]
-                    ellipse="misc/ellipse-hero-nozoc"
-                [/filter_wml]
-            [/filter]
-        [/have_location]
+        [filter_wml]
+            ellipse="misc/ellipse-hero-nozoc"
+        [/filter_wml]
     [/or]
     [or]
-        [have_location]
-            {EVENT_UNIT}
-            [filter]
-                [filter_wml]
-                    overlays="misc/hero-icon.png"
-                [/filter_wml]
-            [/filter]
-        [/have_location]
+        [filter_wml]
+            overlays="misc/hero-icon.png"
+        [/filter_wml]
     [/or]
     [or]
-        [have_location]
-            {EVENT_UNIT}
-            [filter]
-                [filter_wml]
-                    [modifications]
-                        [trait]
-                            [effect]
-                                apply_to=overlay
-                                add="misc/hero-icon.png"
-                            [/effect]
-                        [/trait]
-                    [/modifications]
-                [/filter_wml]
-            [/filter]
-        [/have_location]
+        [filter_wml]
+            [modifications]
+                [trait]
+                    [effect]
+                        apply_to=overlay
+                        add="misc/hero-icon.png"
+                    [/effect]
+                [/trait]
+            [/modifications]
+        [/filter_wml]
     [/or]
     [or]
-        [have_location]
-            {EVENT_UNIT}
-            [filter]
-                id=Sir Gerrick,"Li'sar",Minister Hylas,Ethiliel,Urza Afalas,Dacyn,Garak,Zhul,Lionel,Relgorn,Darken Volk,Owaec,Harper,Hamel,"Ro'Arthian","Ro'Sothian",Baglur,Krawg,Thursagan,Durstorn,Grüü,Angarthing,Ratheln,Dulcatulos,Cylanna,Caladon,Garnad,Marshal,Great Chief Brurbar,Sisal,Krash,Lady Jessene,Burin the Lost,Sir Ruddry,Sir Ladoc,Minister Edren,Lord Typhon,Nym,Grog,Konrad,Delfador,Kalenz,Prince Haldric,Haldric II,Deoran,Erlornas,Linaera,Baldras,Tallin,Baran,Rugnur,Gweddry,Kai Krellis,Malin Keshar,Aiglondur,Ardonna,Kaleh,"Kapou'e",Voadar,Jaffar,Rashti,Mehir,Menir,Szel,Arvith,Efraim_de_Ceise,Delenia,Krux,Krux_father,Clammie,Galas,Midnight Queen,Noiraran,Kuhnar,Eloh,Elenia
-            [/filter]
-        [/have_location]
+        id=Sir Gerrick,"Li'sar",Minister Hylas,Ethiliel,Urza Afalas,Dacyn,Garak,Zhul,Lionel,Relgorn,Darken Volk,Owaec,Harper,Hamel,"Ro'Arthian","Ro'Sothian",Baglur,Krawg,Thursagan,Durstorn,Grüü,Angarthing,Ratheln,Dulcatulos,Cylanna,Caladon,Garnad,Marshal,Great Chief Brurbar,Sisal,Krash,Lady Jessene,Burin the Lost,Sir Ruddry,Sir Ladoc,Minister Edren,Lord Typhon,Nym,Grog,Konrad,Delfador,Kalenz,Prince Haldric,Haldric II,Deoran,Erlornas,Linaera,Baldras,Tallin,Baran,Rugnur,Gweddry,Kai Krellis,Malin Keshar,Aiglondur,Ardonna,Kaleh,"Kapou'e",Voadar,Jaffar,Rashti,Mehir,Menir,Szel,Arvith,Efraim_de_Ceise,Delenia,Krux,Krux_father,Clammie,Galas,Midnight Queen,Noiraran,Kuhnar,Eloh,Elenia
     [/or]
 #enddef
 
