--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -86,40 +86,12 @@
         name=nfw_options_first
         value=yes
     [/set_variable]
+    [set_variable]
+        name=nfwe_float_text
+        value=yes
+    [/set_variable]
+    [set_variable]
+        name=nfw_dialog_manual
+        value=yes
+    [/set_variable]
 [/event]
-
-#define NFW_wounds_ENABLED
-    {VARIABLE_CONDITIONAL nfwe_wounds equals 0}
-#enddef
-
-#define NFW_wounds_DISABLED
-    {VARIABLE_CONDITIONAL nfwe_wounds equals 1}
-#enddef
-
-#define NFW_wounds_DISABLED_with_plague
-    {VARIABLE_CONDITIONAL nfwe_wounds equals 2}
-#enddef
-
-#define NFW_dead_ENABLED
-    {VARIABLE_CONDITIONAL nfwe_deadundead equals 1}
-#enddef
-
-#define NFW_undead_ENABLED
-    {VARIABLE_CONDITIONAL nfwe_deadundead equals 2}
-#enddef
-
-#define NFW_funny_ENABLED
-    {VARIABLE_CONDITIONAL nfwe_funny equals yes}
-#enddef
-
-#define NFW_ENABLED_HELP
-    {VARIABLE_CONDITIONAL nfw_04 equals yes}
-#enddef
-
-#define NFW_elemental_ENABLED
-    {VARIABLE_CONDITIONAL nfwe_elemental equals yes}
-#enddef
-
-#define NFW_elemental_DISABLED
-    {VARIABLE_CONDITIONAL nfwe_elemental equals no}
-#enddef
