--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1,4 +1,50 @@
 #textdomain wesnoth-Non_Fatal_Wounds
+
+# this wound is only temporal, this unit is killed at the start of the next scenario, and is only visible when the unit speaks his last messages
+#define NFW_dead_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=nfw_dead
+            male_name="<span color='#DA0000'>"+_"dead"+"</span>"
+            female_name="<span color='#DA0000'>"+_"female^dead"+"</span>"
+        [/trait]
+    [/modify_unit]
+
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Death" {NFW_COLOR_RED}}
+#enddef
+
+# same as death
+#define NFW_plagued_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=nfw_plagued
+            male_name="<span color='#DA0000'>"+_"plagued"+"</span>"
+            female_name="<span color='#DA0000'>"+_"female^plagued"+"</span>"
+        [/trait]
+    [/modify_unit]
+
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Lost" {NFW_COLOR_RED}}
+#enddef
+
+#define NFW_destroyed_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=nfw_dead
+            male_name="<span color='#DA0000'>"+_"destroyed"+"</span>"
+            female_name="<span color='#DA0000'>"+_"female^destroyed"+"</span>"
+        [/trait]
+    [/modify_unit]
+
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Destruction" {NFW_COLOR_RED}}
+#enddef
+
+#define NFW_retreat_WOUND
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Retreat" {NFW_COLOR_RED}}
+#enddef
+
 # one use wound, do not have any display
 #define NFW_short_term_memory_loss_WOUND
     [modify_unit]
@@ -8,7 +54,7 @@
             set=0
         [/effect]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Memory Loss" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Memory Loss" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -51,7 +97,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Arm" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Broken Arm" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -91,7 +137,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Wing" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Broken Wing" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -131,7 +177,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Leg" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Broken Leg" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -174,7 +220,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Broken Rib" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Broken Rib" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -218,7 +264,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Burn" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Burn" {NFW_COLOR_RED}}
 #enddef
 
 # one use wound
@@ -250,7 +296,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Capture" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -292,7 +338,7 @@
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Concussion" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Concussion" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -319,39 +365,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Cowardice" {NFW_COLOR_RED}}
-#enddef
-
-# this wound is only temporal, this unit is killed at the start of the next scenario, and is only visible when the unit speaks his last messages
-#define NFW_dead_WOUND
-
-    [modify_unit]
-        {FILTER_EVENT_UNIT}
-        [trait]
-            id=nfw_dead
-            male_name="<span color='#DA0000'>"+_"dead"+"</span>"
-            female_name="<span color='#DA0000'>"+_"female^dead"+"</span>"
-        [/trait]
-    [/modify_unit]
-
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Death" {NFW_COLOR_RED}}
-
-#enddef
-
-# same as death
-#define NFW_plagued_WOUND
-
-    [modify_unit]
-        {FILTER_EVENT_UNIT}
-        [trait]
-            id=nfw_plagued
-            male_name="<span color='#DA0000'>"+_"plagued"+"</span>"
-            female_name="<span color='#DA0000'>"+_"female^plagued"+"</span>"
-        [/trait]
-    [/modify_unit]
-
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Lost" {NFW_COLOR_RED}}
-
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Cowardice" {NFW_COLOR_RED}}
 #enddef
 
 # only can get one, to avoid variable conflicts
@@ -407,7 +421,7 @@ Face your fears and defeat them to try to overcome them."
         [/set_variable]
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Scared of $second_weapon.description" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of $second_weapon.description" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -438,7 +452,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Aquaphobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Aquaphobia" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -467,7 +481,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Acrophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Acrophobia" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -496,7 +510,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Erimophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Erimophobia" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -524,7 +538,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Claustrophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Claustrophobia" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -553,7 +567,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dendrophobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Dendrophobia" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -581,7 +595,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Agoraphobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Agoraphobia" {NFW_COLOR_RED}}
 #enddef
 
 # non stackable and mutually exclusive with fear of light
@@ -610,7 +624,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Scared of the dark" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of the dark" {NFW_COLOR_RED}}
 #enddef
 
 # non stackable and mutually exclusive with fear of dark
@@ -639,7 +653,7 @@ Face your fears to try and overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Scared of the light" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of the light" {NFW_COLOR_RED}}
 #enddef
 
 # stackable, non dynamic, requires dedicated event to rebuild every scenario
@@ -670,7 +684,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Nebulaphobia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Nebulaphobia" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -713,7 +727,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Frostbite" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Frostbite" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -756,7 +770,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Gash" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Gash" {NFW_COLOR_RED}}
 #enddef
 
 # non stackable
@@ -793,7 +807,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Infection" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Infection" {NFW_COLOR_RED}}
 #enddef
 
 # non stackable
@@ -844,7 +858,7 @@ Face your fears to try to overcome them."
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Insanity" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Insanity" {NFW_COLOR_RED}}
 #enddef
 
 # stackable, HP doesn't refill completely on advancement, but I'm going to keep it as a handicap
@@ -894,7 +908,7 @@ Face your fears to try to overcome them."
         {FILTER_EVENT_UNIT}
         hitpoints=0
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Mutilation" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Mutilation" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -939,7 +953,7 @@ Arcane resistance -40%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Necrosis" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Necrosis" {NFW_COLOR_RED}}
 #enddef
 
 # not stackable
@@ -975,7 +989,7 @@ Arcane resistance -40%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Amnesia" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Amnesia" {NFW_COLOR_RED}}
 #enddef
 
 # not stackable
@@ -1012,7 +1026,7 @@ Arcane resistance -40%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Sickness" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Sickness" {NFW_COLOR_RED}}
 #enddef
 
 # not stackable
@@ -1063,7 +1077,7 @@ Arcane resistance -40%"
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Wild Magic" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Wild Magic" {NFW_COLOR_RED}}
 #enddef
 
 # stackable, HP doesn't refill completely on advancement, but I'm going to keep it as a handicap
@@ -1122,7 +1136,7 @@ Arcane resistance -40%"
         {FILTER_EVENT_UNIT}
         hitpoints=0
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Damage" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Damage" {NFW_COLOR_RED}}
 #enddef
 
 # ALL WOUNDS BELOW ARE PERMANENT, NEVER HEALS
@@ -1157,7 +1171,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Paper Cut" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Paper Cut" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_stepped_on_lego_WOUND
@@ -1187,7 +1201,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
             [/effect]
         [/object]
     [/modify_unit]
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Stepped on Lego" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Stepped on Lego" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_TRAIT_UNDEAD
@@ -1341,7 +1355,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Ghost" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Ghost" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_undead_corpse_WOUND
@@ -1546,7 +1560,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Zombie" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Zombie" {NFW_COLOR_RED}}
     {CLEAR_VARIABLE side_color}
 #enddef
 
@@ -1614,7 +1628,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Fire elemental" color="255,100,0"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Fire elemental" color="255,100,0"}
 #enddef
 
 #define NFW_elemental_water_WOUND
@@ -1689,7 +1703,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Water elemental" color="0,100,255"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Water elemental" color="0,100,255"}
 #enddef
 
 #define NFW_elemental_poison_WOUND
@@ -1763,7 +1777,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Poison elemental" color="0,175,0"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Poison elemental" color="0,175,0"}
 #enddef
 
 #define NFW_elemental_arcane_WOUND
@@ -1829,7 +1843,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Arcane elemental" color="150,50,150"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Arcane elemental" color="150,50,150"}
 #enddef
 
 #define NFW_elemental_earth_WOUND
@@ -1899,7 +1913,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Earth elemental" color="125,60,0"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Earth elemental" color="125,60,0"}
 #enddef
 
 #define NFW_elemental_air_WOUND
@@ -1971,5 +1985,5 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         hitpoints=0
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Air elemental" color="0,255,255"}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Air elemental" color="0,255,255"}
 #enddef
