--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -4,7 +4,7 @@
 #
 # Using so many ifdefs is an odd style, but if they weren't there then each of these would still need a comment saying which campaign it refers to, and it might affect other campaigns too.
 
-## filter special characters 
+## filter special characters
 
 #ifdef CAMPAIGN_DELFADORS_MEMOIRS
 [event]
@@ -12,7 +12,6 @@
     {VARIABLE nfw_exclude_unit_id "Methor"}
 [/event]
 #endif
-
 
 #ifdef CAMPAIGN_NORTHERN_REBIRTH
 [event]
@@ -32,7 +31,7 @@
     [filter]
         id=Malifor
     [/filter]
-    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_already_wound yes}
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dissolution" {NFW_COLOR_RED}}
 [/event]
 
@@ -46,7 +45,7 @@
     [filter]
         id="Ro'Sothian","Ro'Arthian"
     [/filter]
-    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_already_wound yes}
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" {NFW_COLOR_RED}}
 [/event]
 
@@ -54,12 +53,12 @@
     name=attack_end
     id=nfw_white_mages_attacker
     first_time_only=no
-	[filter_condition]
-		{VARIABLE_CONDITIONAL nfw_white_mages_wound equals yes}
-	[/filter_condition]
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_white_mages_wound equals yes}
+    [/filter_condition]
     [filter]
-		id=Sister Thera,Father Morvin
-		formula=hitpoints < 1
+        id=Sister Thera,Father Morvin
+        formula=hitpoints < 1
     [/filter]
     {VARIABLE nfwme_rand_scary_weapon $second_weapon.name}
     {VARIABLE nfwme_rand_weapon_type $second_weapon.type}
@@ -69,7 +68,7 @@
             {NFW_wounds_DISABLED_with_plague}
         [/or]
         [then]
-            {CLEAR_VARIABLE nfw_already_dead}
+            {CLEAR_VARIABLE nfw_already_wound}
         [/then]
         [else]
             [fire_event]
@@ -89,12 +88,12 @@
     name=attack_end
     id=nfw_white_mages_defender
     first_time_only=no
-	[filter_condition]
-		{VARIABLE_CONDITIONAL nfw_white_mages_wound equals yes}
-	[/filter_condition]
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_white_mages_wound equals yes}
+    [/filter_condition]
     [filter_second]
-		id=Sister Thera,Father Morvin
-		formula=$second_unit.hitpoints < 1
+        id=Sister Thera,Father Morvin
+        formula=$second_unit.hitpoints < 1
     [/filter_second]
     {VARIABLE nfwme_rand_scary_weapon $weapon.name}
     {VARIABLE nfwme_rand_weapon_type $weapon.type}
@@ -104,7 +103,7 @@
             {NFW_wounds_DISABLED_with_plague}
         [/or]
         [then]
-            {CLEAR_VARIABLE nfw_already_dead}
+            {CLEAR_VARIABLE nfw_already_wound}
         [/then]
         [else]
             [fire_event]
@@ -126,30 +125,29 @@
     first_time_only=yes
     [filter_condition]
         {VARIABLE_CONDITIONAL current_scenario_id equals 05a_01_The_Pursuit}
-		[have_unit]
-			id=Sister Thera,Father Morvin
-			count=2
-		[/have_unit]
+        [have_unit]
+            id=Sister Thera,Father Morvin
+            count=2
+        [/have_unit]
     [/filter_condition]
-	[message]
-		speaker=narrator
-		message=_ "<b><i>Non-Fatal Wounds:</i></b> Sister Thera and Father Morvin will revive each other indefinitely every time they lose all of their health. Choose if you want each time this happens to receive a wound like any other unit or not. The effects will be applied immediately, and they cannot receive capture, death, elemental, ghost, or undeath wounds."
-		image="misc/nfw-icon.png"
-		[option]
-			label=_ "Allows them to get wounds"
-			default=yes
-			[command]
-				{VARIABLE nfw_white_mages_wound yes}
-			[/command]
-		[/option]
-		[option]
-			label=_ "Don't let them get wounds"
-			# no action, just leave the default behavior
-		[/option]
-	[/message]
+    [message]
+        speaker=narrator
+        message=_ "<b><i>Non-Fatal Wounds:</i></b> Sister Thera and Father Morvin will revive each other indefinitely every time they lose all of their health. Choose if you want each time this happens to receive a wound like any other unit or not. The effects will be applied immediately, and they cannot receive capture, death, elemental, ghost, or undeath wounds."
+        image="misc/nfw-icon.png"
+        [option]
+            label=_ "Allows them to get wounds"
+            default=yes
+            [command]
+                {VARIABLE nfw_white_mages_wound yes}
+            [/command]
+        [/option]
+        [option]
+            label=_ "Don't let them get wounds"
+            # no action, just leave the default behavior
+        [/option]
+    [/message]
 [/event]
 #endif
-
 
 #ifdef CAMPAIGN_UNDER_THE_BURNING_SUNS
 [event]
@@ -158,22 +156,19 @@
 [/event]
 #endif
 
-
 [event]
     name=start
 
     [switch]
         variable=current_scenario_id
-
     [/switch]
 [/event]
 
-
 [event]
     name=start
     [switch]
         variable=current_scenario_id
-## A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
+        ## A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
 #ifdef CAMPAIGN_SCEPTRE_FIRE
         [case]
             value=7_Outriding_the_Outriders
@@ -201,7 +196,7 @@
             [/fire_event]
         [/case]
 #endif
-# Campaign-specific warning that display a message but don't change the behavior of the mod.
+        # Campaign-specific warning that display a message but don't change the behavior of the mod.
 #ifdef CAMPAIGN_DELFADORS_MEMOIRS
         [case]
             # Using scenario 2 because the first scenario is just dialogue.
@@ -214,7 +209,7 @@
             [/message]
         [/case]
 #endif
-# Scenario-specific warnings with options to change the behavior of the mod.
+        # Scenario-specific warnings with options to change the behavior of the mod.
 #ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
         [case]
             value=06_Temple_in_the_Deep
@@ -242,8 +237,8 @@
             [/message]
         [/case]
         [case]
-# po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.            
-			value=15_A_New_Land
+            # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
+            value=15_A_New_Land
             [message]
                 speaker=narrator
                 message= _ "<b><i>Non-Fatal Wounds</i></b> modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
@@ -357,19 +352,17 @@
                     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" {NFW_COLOR_RED}}
                 [/else]
             [/if]
-            {VARIABLE nfw_already_dead yes}
+            {VARIABLE nfw_already_wound yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw,Wesfolk Leader"}
         [/case]
         [else]
             {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" {NFW_COLOR_RED}}
-            {VARIABLE nfw_already_dead yes}
+            {VARIABLE nfw_already_wound yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw"}
         [/else]
     [/switch]
 [/event]
 #endif
-
-
 
 #ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
 [event]
@@ -384,7 +377,7 @@
         side=2,3
     [/filter]
     {VARIABLE nfw_death_trigger yes}
-    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_already_wound yes}
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Execution" {NFW_COLOR_RED}}
 [/event]
 
@@ -398,7 +391,7 @@
     [filter]
         id=Thelarion
     [/filter]
-    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_already_wound yes}
     {NFW_frostbite_WOUND}
 [/event]
 
@@ -429,7 +422,7 @@
         side=1
     [/filter]
     {NFW_dead_WOUND}
-    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_no_dialog yes}
 [/event]
 #endif
@@ -612,7 +605,7 @@
         type=Central Body2,Crawling Horror,Pulsing Spire
     [/filter]
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Destruction" {NFW_COLOR_RED}}
-    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_already_wound yes}
 [/event]
 #endif
 
@@ -631,7 +624,7 @@
         [/have_location]
     [/filter_condition]
     {NFW_dead_WOUND}
-    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_no_dialog yes}
 [/event]
 #endif
