--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -21,13 +21,17 @@
     [/option]
 #enddef
 
-#define NFW_WOUNDS STATUS
+#define NFW_WOUNDS STATUS FLOAT MESSAGE
     [message]
         speaker=narrator
-        message="<b>"+_"Activate Wounds"+" → "+"</b>"+_"Activate or deactivate random wounds. If you deactivate, the units will disappear without any message and will return in the next scenario unchanged (except in special cases). If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy."+"
+        message="<b>"+_"Activate Wounds"+" → "+"</b>"+_"Activate or deactivate random wounds. If you deactivate, the units will return to recall list unchanged on the next scenario (except in special cases). If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy. An optional floating text and a message from the unit or narrator will indicate the wound received and help, if applicable."+"
+
+"+_"Note: You can disable wounds along with any combination of activated optional wounds. It will be decided randomly with the same percentage chance as if you had normal wounds activated. Units that do not receive any optional or scripted wounds will return to the recall list unchanged."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
- "+_"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
+ "+_"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"+"
+<b><span color='#00E600'>"+_"Float text"+": "+"</span><span color='#00FFFF'>"+"{FLOAT}"+"</span></b>
+<b><span color='#00E600'>"+_"Messages"+": "+"</span><span color='#00FFFF'>"+"{MESSAGE}"+"</span></b>"
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
@@ -57,9 +61,9 @@
 * <b><i>Frostbite</i></b> (-40% cold resistance) > All units, wounded with ice attack or on a cold terrain, cumulative
 * <b><i>Gash</i></b> (-40% blade resistance) > All units, wounded with blade attack, cumulative
 * <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned
-* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > All units, random but more probable if slowed
-* <b><i>Insanity</i></b> (berserk on melee attacks) > Units without berserk ability
-* <b><i>Mutilation</i></b> (-30% hp) > All units, random, cumulative
+* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random but more probable if slowed
+* <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability
+* <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative
 * <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative
 * <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative
 * <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
@@ -131,6 +135,64 @@
                 [/message]
             [/command]
         [/option]
+        [option]
+            label="<b>»</b> "+_"Change float text"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"Set float text with the wound received."
+                    image="misc/nfw-icon.png"
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfwe_float_text
+                                value=yes
+                            [/set_variable]
+                        [/command]
+                    [/option]
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfwe_float_text
+                                value=no
+                            [/set_variable]
+                        [/command]
+                    [/option]
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
+        [option]
+            label="<b>»</b> "+_"Change messages"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"Set messages when receives a wound. Units or narrator will do differents dialogues depending on the type of wound received, with indications or help if applicable."
+                    image="misc/nfw-icon.png"
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfw_dialog_manual
+                                value=yes
+                            [/set_variable]
+                        [/command]
+                    [/option]
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfw_dialog_manual
+                                value=no
+                            [/set_variable]
+                        [/command]
+                    [/option]
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
         {NFW_MENU_EXIT}
     [/message]
 #enddef
@@ -145,6 +207,7 @@
 
 "+_"<b>Wounds list:</b>
 * <b><i>Death</i></b> (definitive death)
+* <b><i>Destruction</i></b> (definitive death)
 * <b><i>Turning into a ghost</i></b>: -60% HP; -30% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold, fire or arcane > Units that are not already spirits or ghosts
 * <b><i>Turning into a zombie</i></b>: -40% HP, -30% general attack damage, -30% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
         side_for=$side_number
@@ -324,7 +387,7 @@
         [option]
             label="<b>»</b> "+_"Wounds"
             [command]
-                {NFW_WOUNDS $nfwe_wounds}
+                {NFW_WOUNDS $nfwe_wounds $nfwe_float_text $nfw_dialog_manual}
             [/command]
         [/option]
         [option]
