--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -20,11 +20,11 @@
         id=nfw_catch_last_breath
     [/remove_event]
     [remove_event]
-        id=nfwe_rand_wound_id
+        id=nfwe_rand_wound_table,nfwme_death_wounds,nfwme_elemental_wounds,nfwme_captured_heroes_wound,nfwme_mechanical_wound
     [/remove_event]
     [event]
         name=nfwe_rand_wound
-        id=nfwe_rand_wound_id
+        id=nfwe_rand_wound_table
         first_time_only=no
         {NFW_dead_WOUND}
     [/event]
@@ -60,6 +60,7 @@
     [filter_condition]
         {NFW_wounds_ENABLED}
         {VARIABLE_CONDITIONAL nfw_no_dialog not_equals yes}
+        {VARIABLE_CONDITIONAL nfw_dialog_manual equals yes}
     [/filter_condition]
     [filter]
         {EVENT_UNIT}
@@ -67,10 +68,6 @@
             controller=human
         [/filter_side]
     [/filter]
-    [store_unit_type]
-        type=$unit.type
-        variable=nfwe_unit_type
-    [/store_unit_type]
     [if]
         [have_location]
             {EVENT_UNIT}
