--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -70,8 +70,8 @@
                 {COLOR}
                 text={MSG}
             [/floating_text]
-            [then]
-            [/if]
+        [/then]
+    [/if]
 #enddef
 
 #define NFW_FLOAT_TEXT_SCROLL X Y MSG COLOR
